<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp">

                <TextView
                    android:id="@+id/profileHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/currUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/curr_user"
                    android:textColor="#646464" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp">

                <TextView
                    android:id="@+id/timeHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/def_time_msg"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/defTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/def_time"
                    android:textColor="#646464" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp">

                <TextView
                    android:id="@+id/notificationHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/isOn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:textColor="#646464" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp">

                <TextView
                    android:id="@+id/themeHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/currTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/curr_theme"
                    android:textColor="#646464" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/battery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp">

                <TextView
                    android:id="@+id/batteryOptimize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_optimisation"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/optimized"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_disabled"
                    android:textColor="#646464" />
            </LinearLayout>

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16sp"
                android:text="@string/logout"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>