<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:color="@color/background"
    android:gravity="center"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@color/card_background"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_background"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_arrow_back_24"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/signinMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/hello_sign_in"
                        android:textColor="@color/text_primary"
                        android:textSize="20sp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/text_input"
                    android:ems="12"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/text_input"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:drawableTint="@color/input_hint"
                    android:ems="12"
                    android:hint="@string/password"
                    android:importantForAccessibility="yes"
                    android:inputType="textPassword"
                    android:padding="7dp" />

                <EditText
                    android:id="@+id/confirmPasswordInput"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/text_input"
                    android:drawableEnd="@drawable/ic_visibility_off"
                    android:drawableTint="@color/input_hint"
                    android:ems="12"
                    android:hint="@string/cnf_password"
                    android:importantForAccessibility="yes"
                    android:inputType="textPassword"
                    android:padding="7dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/forgotpw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgotpw"
                    android:textColor="@color/accent" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/login" />

                <LinearLayout
                    android:id="@+id/newUserSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/newUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/new_user" />

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/sign_up"
                        android:textColor="@color/accent" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>