<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".TaskListFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/selectAllcb"
            android:layout_width="30dp"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/selectAllText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectAll" />

    </LinearLayout>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/swipeRefreshLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tasksHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks"
                    android:textSize="21sp" />

                <LinearLayout
                    android:id="@+id/taskContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/task0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp">

                        <CheckBox
                            android:id="@+id/cb1"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/text0"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:gravity="center"
                            android:text="@string/toDoTasks"
                            android:textSize="17sp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/blankSpace"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="" />

                <TextView
                    android:id="@+id/completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed"
                    android:textSize="21sp" />

                <LinearLayout
                    android:id="@+id/completedContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/completed0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp">

                        <CheckBox
                            android:id="@+id/cbc1"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/completedText0"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:gravity="center"
                            android:text="@string/completedTask"
                            android:textSize="17sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>